# TradingInfrastructureCrypto

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CLAUDE.md  CMakeLists.txt  DEPENDENCIES.md  PROJECT_REVIEW.md  README.md  pyproject.toml
agents/: AUDIT.md  DEVELOPMENT_GUIDELINES.md  TODOS.md
bindings/: CMakeLists.txt  bindings.cpp  perp_arb_bindings.cpp  perp_arb_sim.hpp  setup.py  trading_core.pyi
build_manual/: binance_feed_example
config/: README.md
core/: AGENTS.md  CLAUDE.md  CMakeLists.txt  detect.py
core/app/: trading_engine_main.cpp
core/bindings/: CMakeLists.txt  bindings.cpp  setup.py  trading_core.pyi
core/common/: curl_abi.hpp  json.hpp  logging.hpp  rest_client.hpp  symbol_mapper.hpp  types.hpp
core/engine/: algo_config_loader.hpp  feed_bootstrap.hpp  trading_engine_main.cpp  venue_quality_runtime.hpp
core/execution/: AGENTS.md  CLAUDE.md  binance_connector.cpp  binance_connector.hpp  coinbase_connector.hpp  exchange_connector.hpp  idempotency_journal.hpp  kraken_connector.cpp  kraken_connector.hpp  live_connector_base.hpp  market_maker.hpp  okx_connector.hpp  order_manager.hpp  reconciliation_service.hpp  reconciliation_types.hpp  smart_order_router.cpp  smart_order_router.hpp  venue_order_map.hpp
core/execution/binance/: binance_connector.cpp  binance_connector.hpp  binance_futures_connector.cpp  binance_futures_connector.hpp
core/execution/coinbase/: coinbase_connector.cpp  coinbase_connector.hpp
core/execution/common/: child_order_scheduler.hpp  exchange_connector.hpp  idempotency_journal.hpp  live_connector_base.hpp  order_manager.hpp  parent_order_manager.hpp  portfolio_intent_engine.hpp  position_ledger.hpp  reconciliation_service.hpp  reconciliation_types.hpp  venue_order_map.hpp  venue_quality_model.hpp
core/execution/common/connectors/: exchange_connector.hpp  idempotency_journal.hpp  live_connector_base.hpp  venue_order_map.hpp
core/execution/common/orders/: child_order_scheduler.hpp  order_manager.hpp  parent_order_manager.hpp
core/execution/common/portfolio/: live_session_accounting.hpp  portfolio_intent_engine.hpp  position_ledger.hpp
core/execution/common/quality/: venue_quality_model.hpp
core/execution/common/reconciliation/: reconciliation_service.hpp  reconciliation_types.hpp
core/execution/kraken/: kraken_connector.cpp  kraken_connector.hpp
core/execution/okx/: okx_connector.cpp  okx_connector.hpp
core/execution/router/: smart_order_router.cpp  smart_order_router.hpp
core/feeds/: AGENTS.md  CLAUDE.md  book_manager.hpp  combined_example.cpp
core/feeds/binance/: README.md  SECURITY.md  binance_feed_handler.cpp  binance_feed_handler.hpp  binance_feed_processing.cpp  binance_futures_feed_handler.cpp  binance_futures_feed_handler.hpp  example_main.cpp
core/feeds/coinbase/: PROTOCOL.md  coinbase_feed_handler.cpp  coinbase_feed_handler.hpp  coinbase_feed_handler_runtime.cpp  coinbase_feed_processing.cpp
core/feeds/common/: book_manager.hpp  feed_handler_utils.cpp  feed_handler_utils.hpp  symbol_mapper.hpp  tick_size.hpp
core/feeds/kraken/: example_main.cpp  kraken_feed_handler.cpp  kraken_feed_handler.hpp  kraken_feed_handler_processing.cpp  kraken_futures_feed_handler.hpp
core/feeds/okx/: INVESTIGATION.md  okx_feed_handler.cpp  okx_feed_handler.hpp  okx_feed_handler_processing.cpp
core/ipc/: AGENTS.md  alpha_signal.hpp  lob_publisher.hpp  regime_signal.hpp
core/orderbook/: AGENTS.md  CLAUDE.md  orderbook.hpp
core/risk/: AGENTS.md  CLAUDE.md  arb_risk_manager.hpp  circuit_breaker.hpp  global_risk_controls.hpp  kill_switch.hpp  recovery_guard.hpp  risk_config_loader.hpp
core/shadow/: shadow_engine.hpp
core/strategy/: perp_arb_main.cpp  perp_arb_strategy.hpp
deploy/: DEPLOYMENT.md  daily_metrics.py  daily_train.py  run_live.sh  run_shadow.sh  slo_engine.py  slo_metrics.py
docs/: AUDIT.md  CRITICAL_TODOS_2026-03-19.md  DEVELOPMENT_GUIDELINES.md  FUTURES_SPOT_REVIEW_2026-03-29.md  SHADOW_RUN_SOLUSDT_2026-03-26.md  SLO_FRAMEWORK.md  TODOS.md  TODOS_EXECUTION_ENGINE.md  WORKFLOW.md  log_deep_dive_2026-03-24_eth_sol.md  regime_stability_plan_2026-03-24.md  shadow.txt
logs/: neural_alpha_shadow.jsonl  session_shadow.jsonl
models/: btcusdt.txt  neural_alpha_btcusdt_latest.json  neural_alpha_btcusdt_secondary.json  neural_alpha_ethusdt_latest.json  neural_alpha_latest.json  neural_alpha_solusdt_latest.json  neural_alpha_solusdt_secondary.json  r2_regime_model.json  r2_regime_model.json.meta.json  r2_regime_model_btcusdt.json  r2_regime_model_btcusdt.json.meta.json  r2_regime_model_ethusdt.json  r2_regime_model_solusdt.json  r2_regime_model_solusdt.json.meta.json  shadow.txt  (+2 more)
tests/: AGENTS.md  CLAUDE.md  CMakeLists.txt
tests/data/binance/: futures_error_fixtures.json
tests/data/replay/: binance_btcusdt_replay.csv
tests/data/shadow_phase0/: neural_alpha_shadow.jsonl  ops_events.jsonl
tests/integration/: full_pipeline_replay_test.cpp  test_ensemble_checkpoint_ipc.py
tests/perf/: bench_bindings.py  latency_budget_test.cpp
tests/replay/: feed_disconnect_chaos_test.cpp  feed_replay_test.cpp
tests/unit/: algo_config_loader_test.cpp  arb_risk_manager_test.cpp  binance_feed_test.cpp  binance_futures_connector_test.cpp  child_order_scheduler_test.cpp  coinbase_feed_test.cpp  connector_contract_test.cpp  connector_failure_injection_test.cpp  execution_test.cpp  feed_bootstrap_test.cpp  global_risk_controls_test.cpp  idempotency_recovery_test.cpp  ipc_test.cpp  kraken_feed_test.cpp  live_connectors_test.cpp  live_session_accounting_test.cpp  market_maker_risk_test.cpp  okx_feed_test.cpp  order_manager_test.cpp  orderbook_test.cpp  parent_order_manager_test.cpp  portfolio_intent_engine_test.cpp  reconciliation_service_test.cpp  shadow_engine_test.cpp  smart_order_router_test.cpp  test_bindings.py  test_core_bridge_pipeline.py  test_data_quality.py  test_model_governance.py  test_model_ipc_compat.py  test_neural_alpha.py  test_pipeline_hpo.py  test_regime.py  test_shadow_metrics.py  venue_quality_model_test.cpp  venue_quality_runtime_test.cpp
(+121 files in other folders)
