[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11", "numpy>=1.24"]
build-backend = "scikit_build_core.build"

[project]
name = "trading-core"
version = "1.0.0"
description = "ThamesRiverTrading C++ pybind11 bridge"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.scikit-build]
cmake.build-type = "Release"
# Only install the C extension — no Python packages in this wheel.
wheel.packages = []

[tool.scikit-build.cmake.define]
# Skip GTest suite when building the Python wheel.
BUILD_TESTS = "OFF"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — black handles this
    "E741",   # ambiguous variable name (l, O, I)
    "W291",   # trailing whitespace
    "W293",   # whitespace before ':'
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
